# mlip-dynamic-stability

./: .gitignore  .zenodo.json  README.md  pyproject.toml
configs/: curated_systems.yaml
docs/: process_summary.md  research_brief.md
envs/: README.md  base-requirements.txt
mlip_dynstab/: __init__.py  analysis.py  calculators.py  cli.py  finite_t.py  harmonic.py  ledger.py  references.py  systems.py
paper/: cover_letter.docx  cover_letter.md  manuscript.docx  manuscript.md  review.md  supplementary.docx  supplementary.md
paper/fig1_src/: build_fig1.py  fig1_overview.excalidraw
results/: convergence_study.parquet  ledger.jsonl  ledger.parquet
scripts/: diag_softmode_pick.py  diag_srtio3.py  diag_srtio3_ph.py  diag_validate.py  gate_softmode_srtio3.py  make_figures.py  run_all_ft.sh  run_grid.py  run_overnight.sh  run_revision_compute.sh  run_sscha_tihf.sh  run_sscha_zr.sh  sscha_poc.py  sscha_repro.py  sscha_tune.py  sscha_v4_diag.py
tasks/: lessons.md  todo.md
