[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip-dynamic-stability"
version = "0.1.0"
description = "Finite-temperature dynamic-stability stress test of foundation MLIPs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "pyyaml>=6",
    "ase>=3.23",
    "phonopy>=2.26",
]

[project.optional-dependencies]
data = ["pymatgen>=2024.5", "mp-api>=0.41", "jarvis-tools>=2024.4"]
viz = ["matplotlib>=3.8", "seaborn>=0.13"]

[tool.setuptools]
packages = ["mlip_dynstab"]
